# concierge_bot

./: .gitignore  README.md
backend/: app.py
backend/config/: tenants.yaml
backend/config/the_killarney_park/: faq.txt
backend/config/the_shelbourne/: faq.txt
backend/prompts/: prompt.txt
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css  output.css
server/: Procfile  app.json  app.py  package-lock.json  pyproject.toml  requirements.txt
server/config/the_killarney_park/: events.txt
server/config/the_shelbourne/: events.txt
